# newton-bridge

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  install.sh  pyproject.toml  run.sh  sim_node.py
assets/_cache/: README.md
docker/: Dockerfile  compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEFERRED_WORK.md  EXAMPLES.md  IMPLEMENTATION_PLAN.md  INSTALL.md  README.md  ROBOTS.md  SETUP.md  TOPICS.md  TROUBLESHOOTING.md  USAGE.md  VIEWER.md
docs/en/: README.md
examples/: controller_demo.py
robots/franka/: robot.yaml
robots/kuka_iiwa_14/: robot.yaml
robots/ur5e/: robot.yaml
scripts/: controller_demo.py  fetch_assets.sh  rl_smoketest.py  verify.sh
scripts/container/: rl_smoketest.py  verify.sh
scripts/host/: build.sh  fetch_assets.sh  install.sh  run.sh  verify_ros.sh
src/newton_bridge/: __init__.py  __main__.py  node.py  robot_pack.py  sensors.py  ticks.py  viewer.py  world.py  xacro_loader.py
tests/: test_drive_schema.py  test_robot_pack.py  test_scene_spec.py  test_sync_schema.py  test_ticks.py  test_viewer_factory.py  test_xacro_loader.py
workspace/: README.md
