[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "newton-bridge"
version = "0.1.0"
description = "Standalone Newton Physics + ROS 2 Jazzy bridge"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "junho.park" }]

# Runtime deps NOT handled by the Docker image (newton, warp, rclpy, torch
# come from the image's apt/pip layers). Listing them here keeps a
# host-side `pip install -e .` viable for editor tooling and tests.
dependencies = [
    "numpy>=1.24",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
]

[project.scripts]
newton-bridge = "newton_bridge.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/newton_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
